# midterm

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  AI_강의분석_리포트_프로젝트_계획서.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.claude/: settings.json
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.playwright-cli/: page-2026-04-02T18-02-07-478Z.yml
NLP 과제 1 - AI 강의 분석 리포트 생성기/: README.md  강의 메타데이터.csv  강의 품질 기준.md  데이터_분석_리포트.md
api/: main.py  requirements.txt
app/: main.py
config/: checklist.yaml  settings.py
docs/: TRIBE_v2_수강자_반응_시뮬레이션.md  checklist_spec.md  decision-points.md  experiment_plan_midterm.md  experiment_results_midterm.md  interface_contract.md  개별_개발_흐름_가이드.md  기획서.md  라이브러리_관리_전략_가이드.md  현재-진행상황.md  환경세팅_가이드_Windows.md  환경세팅_가이드_macOS.md
experiments/: README.md  hop_comparison_20260331_215800.json  hop_comparison_20260331_215800.md  window_comparison_20260402_000205.json  window_comparison_20260402_000205.md
frontend/: .gitignore  README.md  SETUP.md  eslint.config.mjs  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
memory/: current-state.md  data-inventory.md  decisions.md  domain-model.md  handoff-2026-04-03-sections-evaluations.md  handoff-template.md  open-questions.md  workflows.md
presentation/: deck.html
requirements/: base.txt  dev.txt  llm_analysis.txt  preprocessing.txt  report_ui.txt  rule_analysis.txt
scripts/: build_roi_summary_from_raw.py  build_simulation_playback_assets.py  build_simulation_seed_data.py  check_env.py  export_frontend_data.py  (+8 more)
(+560 files in other folders)
